syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.sdj3.sep_t3.protobuf";

message Empty{

}

message GenericMessage
{
  string message=1;
}